# homn

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  install.sh  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
crates/homn-audit/: Cargo.toml
crates/homn-audit/migrations/: 0001_initial.sql  0002_ledger.sql  0003_watermarks.sql
crates/homn-audit/src/: ledger.rs  lib.rs  watermarks.rs
crates/homn-audit/tests/: deletion_receipt.rs  ledger_chain.rs
crates/homn-bin/: Cargo.toml
crates/homn-bin/src/: main.rs
crates/homn-daemon/: Cargo.toml
crates/homn-daemon/src/: config.rs  event_bus.rs  handler.rs  lib.rs  socket.rs
crates/homn-daemon/tests/: e2e_decisions.rs
crates/homn-eval/: Cargo.toml
crates/homn-eval/src/: ingest.rs  lib.rs  ops.rs  schema.rs  score.rs
crates/homn-eval/tests/: synthetic_flow.rs  template_parses.rs
crates/homn-face/: Cargo.toml  tauri.conf.json
crates/homn-face/src/: main.rs
crates/homn-face/tests/: config.rs
crates/homn-gate/: Cargo.toml
crates/homn-gate/src/: lib.rs  pipeline.rs  policy.rs  redaction.rs
crates/homn-hook/: Cargo.toml
crates/homn-hook/src/: install.rs  lib.rs  pty.rs  setup.rs
crates/homn-learning/: Cargo.toml
crates/homn-learning/migrations/: 0001_initial.sql
crates/homn-learning/src/: lib.rs  normalize.rs
crates/homn-mcp/: Cargo.toml
crates/homn-mcp/src/: brain.rs  lib.rs  rate_limit.rs
crates/homn-mcp/tests/: read_path_no_egress.rs
crates/homn-policy/: Cargo.toml
crates/homn-policy/benches/: eval.rs
crates/homn-policy/src/: lib.rs  parse.rs  watcher.rs
crates/homn-sources/: Cargo.toml
crates/homn-sources/src/: dictation.rs  lib.rs  screenpipe.rs
crates/homn-sources/tests/: dictation.rs  poll_cursor.rs
crates/homn-tui/: Cargo.toml
crates/homn-tui/src/: lib.rs
crates/homn-types/: Cargo.toml
crates/homn-types/src/: bus.rs  decision.rs  lib.rs  observation.rs  receipt.rs  redaction.rs  rpc.rs  session.rs  source.rs
crates/homnd/: Cargo.toml
crates/homnd/src/: control.rs  daemon.rs  dedupe.rs  lib.rs  pipeline.rs  session.rs  store.rs
crates/homnd/tests/: forget.rs
docs/: getting-started.md
docs/architecture/: brain.md  data-flow.md  face.md  overview.md  policy-engine.md
docs/architecture/adr/: 0001-naming.md  0002-rust-rhai.md  0003-pty-fallback.md  0004-tauri-vs-egui.md  0005-ctxgraph-separate.md  0006-mcp-server.md  0007-spec-kit-integration.md  README.md
docs/launch/: demo.cast  hn-post.md
docs/phases/: milestones.md  phase-1-policy.md  phase-2-face.md  phase-3-brain.md
docs/product/: overview.md
docs/research/: claude-code-hooks.md  polkit-deep-dive.md  prior-art.md
docs/risks/: known-unknowns.md
docs/superpowers/plans/: 2026-05-18-easy-install.md  2026-05-23-phase-2-face-spike.md
docs/superpowers/specs/: 2026-05-18-easy-install-design.md  2026-05-23-phase-2-face-spike-design.md
docs/technical/: audit-log.md  hook-integration.md  ipc-protocol.md  mcp-server.md  policy-language.md
docs/v2/: README.md  architecture.md  product-overview.md  tech-plan.md
eval/: README.md
eval/questions/: 2026-07-18.toml  TEMPLATE.toml  synthetic-week.toml
eval/results/: 2026-07-18.md
policies/: README.md  default.rhai  example.rhai  ingest.rhai  project-example.rhai  relaxed.rhai  strict.rhai
scripts/: demo.sh
specs/001-policy-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-policy-engine/contracts/: hook-protocol.md
specs/002-ambient-memory/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ambient-memory/checklists/: requirements.md
specs/002-ambient-memory/contracts/: cli-commands.md  gate-pipeline.md  mcp-tools.md  source-trait.md
