[workspace]
resolver = "2"
members = [
    "crates/homn-bin",
    "crates/homn-daemon",
    "crates/homn-policy",
    "crates/homn-audit",
    "crates/homn-hook",
    "crates/homn-tui",
    "crates/homn-mcp",
    "crates/homn-learning",
    "crates/homn-types",
    "crates/homn-sources",
    "crates/homn-gate",
    "crates/homnd",
    "crates/homn-eval",
]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.83"
authors       = ["Rohan Sharma <hello@rohan.sh>"]
license       = "Apache-2.0"
repository    = "https://github.com/rohansx/homn"
homepage      = "https://github.com/rohansx/homn"
description   = "Local-first policy daemon, ASCII face, and context graph for coding agents."
readme        = "../../README.md"
keywords      = ["claude-code", "polkit", "policy", "agent", "developer-tools"]
categories    = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Shared crate paths
homn-types     = { path = "crates/homn-types", version = "0.1.0" }
homn-policy    = { path = "crates/homn-policy", version = "0.1.0" }
homn-audit     = { path = "crates/homn-audit", version = "0.1.0" }
homn-hook      = { path = "crates/homn-hook", version = "0.1.0" }
homn-tui       = { path = "crates/homn-tui", version = "0.1.0" }
homn-mcp       = { path = "crates/homn-mcp", version = "0.1.0" }
homn-learning  = { path = "crates/homn-learning", version = "0.1.0" }
homn-daemon    = { path = "crates/homn-daemon", version = "0.1.0" }
homn-sources   = { path = "crates/homn-sources", version = "0.1.0" }
homn-gate      = { path = "crates/homn-gate", version = "0.1.0" }
homnd          = { path = "crates/homnd", version = "0.1.0" }
homn-eval      = { path = "crates/homn-eval", version = "0.1.0" }

# Common ecosystem deps
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
clap           = { version = "4", features = ["derive", "env"] }
thiserror      = "2"
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml           = "0.8"
rusqlite       = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"
async-trait    = "0.1"
ulid           = "1"
rhai           = { version = "1", features = ["serde", "sync"] }
regex          = "1"
humantime      = "2"
chrono         = { version = "0.4", default-features = false, features = ["clock", "std"] }
is-terminal    = "0.4"
notify         = "8"
arc-swap       = "1"
portable-pty   = "0.8"
signal-hook    = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures        = "0.3"
rmcp           = { version = "1", features = ["server", "macros", "schemars", "transport-io"] }
xxhash-rust    = { version = "0.8", features = ["xxh3"] }

# External brain (T007): public repo, feature-gated behind `brain-agidb` in
# consuming crates — resolved by cargo everywhere, compiled only when the
# feature is enabled (local dogfood builds; CI never compiles it).
# cloakpipe/ctxgraph deliberately absent: not consumable yet — their features
# exist as no-dep placeholders in homn-gate / homnd until vendored.
agidb          = { git = "https://github.com/rohansx/agidb" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
