[package]
name = "homn-audit"
description = "SQLite-backed audit log for homn decisions."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
homn-types     = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
anyhow         = { workspace = true }
tokio          = { workspace = true }
tokio-rusqlite = { workspace = true }
rusqlite       = { workspace = true }
serde_json     = { workspace = true }
# Not in [workspace.dependencies]; crate-local on purpose (hash chain lives only here).
blake3         = "1"

[dev-dependencies]
tempfile       = "3"
chrono         = { workspace = true }
