[package]
name = "homn-bin"
description = "The homn binary: subcommand dispatch for daemon, install, log, rule, learning, run, mcp."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[[bin]]
name = "homn"
path = "src/main.rs"

[dependencies]
homn-daemon   = { workspace = true }
homnd         = { workspace = true }
homn-types    = { workspace = true }
homn-hook     = { workspace = true }
homn-audit    = { workspace = true }
homn-mcp      = { workspace = true }
homn-policy   = { workspace = true }
homn-learning = { workspace = true }
homn-eval     = { workspace = true }
agidb         = { workspace = true, optional = true }
regex         = { workspace = true }
arc-swap      = { workspace = true }

clap          = { workspace = true }
tokio         = { workspace = true }
anyhow        = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
humantime     = { workspace = true }
chrono        = { workspace = true }
is-terminal   = { workspace = true }

[features]
default = []
# Enable the agidb-backed brain for `homn eval run` / `homn eval ingest` (Phase 0) and for
# `homn mcp --brain` (the recall/timeline tools query a real agidb brain).
# CI builds without it; local dogfood builds with `--features brain-agidb`.
brain-agidb = ["homn-eval/brain-agidb", "homn-mcp/brain-agidb", "dep:agidb"]
