[package]
name = "homn-eval"
description = "Phase 0 recall-evaluation harness: the 10/10/10 question set, recall@k scoring, and the brain-architecture gate."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
serde     = { workspace = true }
toml      = { workspace = true }
thiserror = { workspace = true }
agidb     = { workspace = true, optional = true }
rusqlite  = { workspace = true, optional = true }
tokio     = { workspace = true, optional = true }
chrono    = { workspace = true, optional = true }

[features]
brain-agidb = ["dep:agidb", "dep:rusqlite", "dep:tokio", "dep:chrono"]
