[package]
name = "homn-gate"
description = "The privacy gate: redaction + Rhai ingest policy + hash-chained receipts, before anything persists."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
homn-types = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
