[package]
name = "homn-gate"
description = "The privacy gate: redaction + Rhai ingest policy + hash-chained receipts, before anything persists."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
homn-types  = { workspace = true }
homn-audit  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
ulid        = { workspace = true }
rhai        = { workspace = true }
regex       = { workspace = true }
notify      = { workspace = true }
arc-swap    = { workspace = true }

[dev-dependencies]
tempfile = "3"