[package]
name = "homn-mcp"
description = "MCP server exposing query_policy, explain_decision, suggest_rule, recent_decisions."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
homn-types   = { workspace = true }
homn-policy  = { workspace = true }
homn-audit   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
tokio        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
rmcp         = { workspace = true }
arc-swap     = { workspace = true }
async-trait  = { workspace = true }
chrono       = { workspace = true }
agidb        = { workspace = true, optional = true }

[features]
default = []
# Enable the agidb-backed Brain so the MCP recall/timeline tools query a real agidb brain.
brain-agidb = ["dep:agidb"]

[dev-dependencies]
ulid         = { workspace = true }
