[package]
name = "homn-sources"
description = "Capture-source abstraction for homn's ingestion spine (screen, dictation; poll-cursor connectors later)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
homn-types  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
