[package]
name = "homn-tui"
description = "Terminal-UI surface for homn permission prompts (ratatui)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
homn-types  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
