[package]
name = "homn-types"
description = "Shared types for the homn workspace (Decision, BusEvent, RuleSourceLocation, ...)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
